# soloscuro-archive

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  design-decisions  gdb.cmd  main.lua  makefile  makefile.adlmidi  makefile.ds  makefile.gen  makefile.in  makefile.new  makefile.sdl  makefile.sdl2  makefile.win  makefile.xmimidi  player_input.lua
.github/workflows/: c-cpp.yml  github-action-build.yml
builds/: build-libadlmidi.sh  build-linux.sh  build-windows.sh  readme
code-blocks/: soloscuro.cbp  soloscuro.depend  soloscuro.layout
code-generation/powers/: CMakeLists.txt  cut.sh  extract.c  powers-generator.c  spell-apply.dia  tables.c
csharp-sdl/: GFF.cs  Program.cs
docs/: dsl-lua-c-interface.md
ext/: CMakeLists.txt  config.h
from-players/: Readme.md
include/: alignment.h  animation.h  annotations.h  arbiter.h  audio.h  background.h  class.h  combat-region.h  combat-status.h  combat.h  common.h  description.h  ds-load-save.h  effect.h  entity-animation.h  entity-list.h  entity.h  event.h  examine.h  font.h  game-menu.h  gameloop.h  gff-char.h  gff-image.h  gff-map.h  gff-xmi.h  gff.h  gpl-lua.h  gpl-manager.h  gpl-state.h  gpl-string.h  gpl-var.h  gpl.h  innate.h  input.h  interact.h  inventory.h  item.h  keycodes.h  label.h  (+37 more)
lua/: main.lua  player_input.lua  settings.lua  test.lua
sdl/: CMakeLists.txt  animate.c  animate.h  audio.c  audio.h  background.c  browse.c  font.c  font.h  label.c  label.h  lua-generate-globals.c  lua.c  lua.h  main.c  main.h  makefile  map.c  map.h  mouse.c  mouse.h  player.c  player.h  screen-manager.c  screen-manager.h  screen.c  sprite.c  sprite.h  support.c  textbox.c  textbox.h  uil.h  utils.c  utils.h  window-manager.c  window-manager.h  window.c
sdl/screens/: add-load-save.c  add-load-save.h  combat-status.c  combat-status.h  game-menu.c  game-menu.h  interact.c  interact.h  inventory.c  inventory.h  main.c  main.h  narrate.c  narrate.h  new-character.c  new-character.h  popup.c  popup.h  screen-main.c  screen-main.h  screens.txt  view-character.c  view-character.h
sdl/windows/: add-load-save.c  add-load-save.h  combat-status.c  combat-status.h  game-menu.c  game-menu.h  interact.c  interact.h  inventory.c  inventory.h  narrate.c  narrate.h  new-character.c  new-character.h  popup.c  popup.h  view-character.c  view-character.h  window-main.c  window-main.h
src/: CMakeLists.txt  animation.c  animation.h  arbiter.c  combat-animation.c  combat-animation.h  combat-region.c  combat-region.h  combat.c  combat.h  ds-combat.h  ds-item.c  ds-item.h  ds-load-save.c  ds-load-save.h  ds-narrate.c  ds-narrate.h  ds-object.c  ds-object.h  ds-player.c  ds-player.h  ds-region-manager.c  ds-region-manager.h  ds-region.c  ds-region.h  ds-scmd.c  ds-scmd.h  ds-state.c  ds-state.h  ds-string.c  ds-string.h  dsl-execute.c  dsl-execute.h  dsl-lua.c  dsl-lua.h  dsl-manager.c  dsl-manager.h  dsl-narrate.c  dsl-narrate.h  dsl-object.c  (+91 more)
src/annotations/: annotations.c
src/gff/: gff-char.c  gff-image.c  gff-map.c  gff-xmi.c  gff.c
src/gpl/: gpl-lua.c  gpl-manager.c  gpl-request.c  gpl-string.c  gpl-var.c  gpl.c  state.c
src/lua/: ds.c  entity.c  lua-structs.c  manager.c  region.c  settings.c
src/objects/: entity-animation.c  entity-list.c  entity.c  item.c  passive.c  player.c
src/powers/: effect.c  makefile  powers.c  wizard-acid-arrow.c  wizard-anti-magic-shell.c  wizard-armor.c  wizard-bigbys-clenched-fist.c  wizard-bigbys-crushing-hand.c  wizard-blink.c  wizard-blur.c  wizard-burning-hands.c  wizard-chain-lightning.c  wizard-chaos.c  wizard-charm-monster.c  wizard-charm-person.c  wizard-chill-touch.c  wizard-cloud-kill.c  wizard-color-spray.c  wizard-cone-of-cold.c  wizard-confusion.c  wizard-conjure-elemental.c  wizard-conjure-greater-elemental.c  wizard-control-undead.c  wizard-crystal-brittle.c  wizard-death-fog.c  wizard-death-spell.c  wizard-delayed-blast-fireball.c  wizard-detect-invisible.c  wizard-disintegrate.c  wizard-dismissal.c  wizard-dispel-magic.c  wizard-dome-of-invulnerability.c  wizard-dominate.c  wizard-enlarge.c  wizard-evards-black-tentacles.c  wizard-fear.c  wizard-feeble-mind.c  wizard-finger-of-death.c  wizard-fire-shield.c  wizard-fireball.c  (+83 more)
src/spells/: armor.c  burning_hands.c
src/ssi/: ds-load-save.c  ssi-item.c  ssi-scmd.c
src/systems/: alignment.c  class.c  race.c  stats.c
src/ui/: add-load-save.c  animation.c  combat-status.c  description.c  examine.c  game-menu.c  interact.c  inventory.c  label.c  map.c  narrate.c  new-character.c  popup.c  portrait.c  sol_textbox.c  view-character.c  window-main.c  window-manager.c  window.c  windows.txt
sup/: linux_sdl_gl.sup  lsan.sup
test/: CMakeLists.txt  animation-test.c  append-gff-test.c  base-test.c  base.c  combat-test.c  entity-list-test.c  entity-test.c  gff-test.c  load-test.c  lua-base.c  lua-combat-01.c  lua-combat-02.c  lua-combat-03.c  lua-combat-04.c  lua-combat-05.c  lua-combat-06.c  lua-combat-07.c  lua-combat-08.c  lua-combat-09.c  lua-combat-10.c  lua-combat-11.c  lua-combat-12.c  lua-combat-13.c  lua-combat-14.c  lua-combat-15.c  lua-combat-16.c  lua-combat-17.c  lua-combat-21.c  lua-hunt-18.c  lua-move-20.c  lua-template-test.c  lua-test.c  new-char-test.c  player-test.c  region-manager-test.c  region-test.c  smoke-map-test.c  smoke-test.c  template-test-lua.lua  (+1 more)
test/lua/: 18-hunt.lua  20-move.lua
test/lua/combat/: 00-combat-smoke-test.lua  01-detect-in-combat.lua  02-get-attacked.lua  03-far-attack.lua  04-multi-round.lua  05-player-attack.lua  06-player-attack-with-els-drinker.lua  07-player-attack-high-level.lua  08-player-high-level-stats.lua  09-multi-enemy.lua  10-range-attack.lua  11-range-multi-attack.lua  12-multi-player.lua  13-player-dead-team-wins.lua  14-magic-missile-cant.lua  15-magic-missile.lua  16-magic-missile-full.lua  16-magic-missile-high-level.lua  17-magic-missile-run-out.lua  19-game-over.lua  21-guard.lua
tools/: gff-inspector.c  gff.c  makefile  server.c
unity/: CMakeLists.txt
windows/: run-browse.bat  run-extract-items.bat  run-new.bat  run-view.bat
xmimidi/: xmi2mid.c
(+65 files in other folders)
